/*
 * Copyright (C) 2020 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.google.companionprotos;

import "operation_type.proto";

option java_package = "com.google.android.companionprotos";
option java_outer_classname = "DeviceMessageProto";

// A message between devices.
message Message {
  // The operation that this message represents.
  OperationType operation = 1;

  // Whether the payload field is encrypted.
  bool is_payload_encrypted = 2;

  // Identifier of the intended recipient.
  bytes recipient = 3;

  // The bytes that represent the content for this message.
  bytes payload = 4;

  // Original message size before compression was applied
  // or zero if no compression was applied.
  uint32 original_size = 5;
}
