/*
 * Copyright (C) 2020 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.google.companionprotos;

option java_package = "com.google.android.companionprotos";
option java_outer_classname = "PacketProto";

// A packet across a stream.
message Packet {
  // A 1-based packet number. The first message will have a value of "1" rather
  // than "0".
  fixed32 packet_number = 1;

  // The total number of packets in the message stream.
  int32 total_packets = 2;

  // Id of message for reassembly on other side
  int32 message_id = 3;

  // The bytes that represent the message content for this packet.
  bytes payload = 4;
}
